plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.jacob'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
    compileOnly "com.sun.xml.ws:jaxws-rt:4.0.1"

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql:42.6.0'
	implementation 'org.hibernate.orm:hibernate-core:6.2.2.Final'
	implementation 'commons-codec:commons-codec:1.11'
	implementation "jakarta.json:jakarta.json-api"
	implementation 'org.glassfish:jakarta.json:2.0.1'

	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:webjars-locator-core'
	// implementation 'org.webjars:sockjs-client:1.0.2'
	testImplementation "com.sun.xml.ws:jaxws-rt:4.0.1"
    testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
    implementation 'org.webjars:stomp-websocket:2.3.3'
	// implementation 'org.webjars:bootstrap:3.3.7'
	// implementation 'org.webjars:jquery:3.1.1-1'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}